--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/chatapp
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 spring.jpa.hibernate.ddl-auto=update
+spring.data.mongodb.uri=mongodb://localhost:27017/chat_app
+
 
