--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.application.name=Chat App
 spring.datasource.url=jdbc:mysql://localhost:3306/chatapp
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.data.mongodb.uri=mongodb://localhost:27017/chat_app
 
