--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,19 @@
 spring.application.name=Chat App
-spring.datasource.url=jdbc:mysql://localhost:3306/chatapp
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/chatapp
+#spring.datasource.username=springstudent
+#spring.datasource.password=springstudent
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update*/
+
+spring.datasource.url=jdbc:mysql://2ekuyA38Bwe5v2k.root:A6ndk4T5CcUwDPxV@gateway01.ap-southeast-1.prod.aws.tidbcloud.com:4000/test?sslMode=VERIFY_IDENTITY
+spring.datasource.username=2ekuyA38Bwe5v2k.root
+spring.datasource.password=A6ndk4T5CcUwDPxV
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.data.mongodb.uri=mongodb://localhost:27017/chat_app
+
 
 
