--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17-jdk-slim
 WORKDIR /app
 COPY backend/ .
-RUN mvn clean package
+RUN ./mvnw clean package
 CMD ["java", "-jar", "target/*.jar"]
