--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:21-jdk-slim  # Ensure Java 21
+FROM openjdk:21-jdk-slim  
 WORKDIR /app
 COPY . .
 RUN chmod +x mvnw  # Ensure mvnw is executable
