--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,4 +7,4 @@ RUN ./mvnw clean package
 # Get the actual jar file and rename it
 RUN mv target/*.jar target/app.jar  
 
-CMD ["java", "-jar", "target/app.jar"]  # Run the correct JAR file
+CMD ["java", "-jar", "target/demo-0.0.1-SNAPSHOT.jar"]  # Run the correct JAR file
