more edits in Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,6 @@ RUN chmod +x mvnw  # Ensure mvnw is executable
 RUN ./mvnw clean package
 
 # Get the actual jar file and rename it
-RUN mv target/*.jar target/app.jar  
+RUN mv target/*.jar target/demo-0.0.1-SNAPSHOT.jar  
 
 CMD ["java", "-jar", "target/demo-0.0.1-SNAPSHOT.jar"]  # Run the correct JAR file
