--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,8 @@ COPY . .
 RUN chmod +x mvnw  # Ensure mvnw is executable
 RUN ./mvnw clean package
 
+RUN rm -f target/*.original
+
 # Get the actual jar file and rename it
 RUN mv target/*.jar target/app.jar  
 
