--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,14 @@
 FROM openjdk:21-jdk-slim  
 WORKDIR /app
 COPY . .
-RUN chmod +x mvnw  # Ensure mvnw is executable
+# Ensure mvnw is executable
+RUN chmod +x mvnw  
 RUN ./mvnw clean package
 
 RUN rm -f target/*.original
 
 # Get the actual jar file and rename it
 RUN mv target/demo-0.0.1-SNAPSHOT.jar target/app.jar  
+# Run the correct JAR file
+CMD ["java", "-jar", "target/app.jar"]  
 
-CMD ["java", "-jar", "target/app.jar"]  # Run the correct JAR file
